# xmatch

./: .gitattributes  MANIFEST.in  README.md  example.py  mle.py  settings.sh  setup.cfg  setup.py  table_flux_detections.csv  xmatch.py  xmatchi.py
data/: table.csv
docs/: XMatch.ipynb  cross_match.md  example.py  gc.md  mle.md  nn.md  nn.rest  xmatch.md
docs/notebooks/: SDS82_xmatch_CS82_-1-_reducing_cs82_size.ipynb  SDSstripe82_filtering-CLEAN.ipynb  SDSstripe82_filtering.ipynb  SDStripe82_xmatch-gc_CS82.ipynb  SDStripe82_xmatch-mle_CS82.ipynb  SDStripe82_xmatch_CS82.ipynb  comparison_xmatch_gc-mle_sds_cs82.ipynb  swift_deepsky_s82_unique.csv  table_countrates_stripe82_all_swift_pointings.csv  table_flux_detections_swift_lamassa_chandra.csv  xmatch_filter_duplicates.ipynb  xmatch_gc_remove_dups_swift_all_s82.ipynb  xmatch_gc_swiftS82_lamassaAll.ipynb  xmatch_gc_swift_lamassa.ipynb  xmatch_table_flux_detections_stripe82_unique.csv
docs/notebooks/.ipynb_checkpoints/: xmatch_gc_remove_dups_swift_all_s82-checkpoint.ipynb  xmatch_gc_swift_lamassa-checkpoint.ipynb
docs/notebooks/Comparison_of_GC-MLE_xmatch_methods/: comparison_xmatch_gc-mle_sds_cs82.ipynb  environment.yml
docs/notebooks/Filtering_duplicates/: SDSstripe82_filtering-CLEAN.ipynb  SDSstripe82_filtering-Check-NN-Distances.ipynb
docs/notebooks/Xmatch_sds82_x_cs82_and_plot_fluxes/: xmatch_table_countrates_detections_stripe82_unique.csv
docs/notebooks/lamassa/: .listing  ReadMe
xmatch/: __init__.py  _gc.py  _nn.py  _version.py  _xmatchi.py  fit.py  gc.py  mle.py  nn.py  utils.py  xmatch.py  xmatchi.py
(+9 files in other folders)
