[metadata]
name='xmatch',
description='Astronimcal catalogs cross-matching tool',
url='http://github.com/chbrandt/xmatch'
      
[options]
install_requires =
    astropy
    pandas

packages = find:

[options.packages.find]
where=src  # . by default
include=xmatch*  # * by default
# exclude=mypackage.tests*  # empty by default   

[versioneer]
VCS = git
style = pep440
versionfile_source = xmatch/_version.py
versionfile_build = xmatch/_version.py
tag_prefix =
parentdir_prefix =
