[metadata]
name = xmatch
description = Astronimcal catalogs cross-matching tool
url = https://github.com/chbrandt/xmatch
      
[versioneer]
VCS = git
style = pep440
versionfile_source = xmatch/_version.py
versionfile_build = xmatch/_version.py
tag_prefix =
parentdir_prefix = xmatch

[options]
packages = find:
install_requires =
    astropy
    pandas
    scikit-learn
zip_safe = False

[options.packages.find]
where = . 
include = xmatch*